[workspace]
members = [
	"bootstrap",
	"client",
	"compatibility-tests",
	"core",
	"crawler",
	"fat",
	"relay",
]
default-members = ["client"]
resolver = "2"

[workspace.package]
authors = ["Avail Team"]
repository = "https://github.com/availproject/avail-light"

[workspace.dependencies]
# Internal deps
avail-core = { version = "0.6", git = "https://github.com/availproject/avail-core", tag = "node-v2100-rc1" }
avail-subxt = { version = "0.5", git = "https://github.com/availproject/avail.git", tag = "v2.1.0.0-rc1" }
dusk-plonk = { git = "https://github.com/availproject/plonk.git", tag = "v0.12.0-polygon-2" }
kate-recovery = { version = "0.9", git = "https://github.com/availproject/avail-core", tag = "node-v2100-rc1" }
avail-light-core = { path = "./core" }

anyhow = "1.0.71"
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
confy = "0.5.1"
hex = "0.4.3"
libp2p = { version = "0.53.2", features = ["kad", "identify", "ping", "mdns", "autonat", "relay", "dcutr", "upnp", "noise", "yamux", "dns", "metrics", "tokio", "macros", "tcp", "quic", "serde", "websocket"] }
libp2p-allow-block-list = "0.3.0"
multihash = { version = "0.14.0", default-features = false, features = ["blake3", "sha3"] }
semver = "1.0.23"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
void = "1.0.2"
warp = "0.3.6"

# OpenTelemetry
opentelemetry = "0.24.0"
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.24.1", features = ["metrics", "rt-tokio"] }

[profile.debug-fast]
inherits = "release"
debug = true

[profile.release]
incremental = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
