[package]
name = "avail-light-bootstrap"
version = "0.5.3"
build = "../build.rs"
edition = "2021"
description = "Avail network Bootstrap Node for p2p Light Client"

[dependencies]
avail-light-core = { workspace = true, features = ["crawl"] }

async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
confy = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
libp2p-allow-block-list = { workspace = true }
multihash = { workspace = true }
rand = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
void = { workspace = true }
warp = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
