[package]
name = "avail-light-client"
version = "1.11.0"
edition = "2021"
description = "Avail network p2p Light Client"

[[bin]]
name = "avail-light"
path = "src/main.rs"

[dependencies]
# Internal deps
avail-core = { workspace = true }
avail-light-engine = { workspace = true }
kate-recovery = { workspace = true }

better-panic = "0.3.0"
clap = { workspace = true }
color-eyre = { workspace = true }
confy = "0.4.0"
hex = "0.4"
libp2p = { version = "0.53.2", features = ["kad", "identify", "ping", "mdns", "autonat", "relay", "dcutr", "upnp", "noise", "yamux", "dns", "metrics", "tokio", "macros", "tcp", "quic", "serde", "websocket"] }
sp-core = { version = "28.0.0", features = ["serde"] }
strip-ansi-escapes = "0.2.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.15", features = ["json", "env-filter"] }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
hex-literal = "0.4.0"
proptest = "1.0.0"
test-case = "3.2.1"

[features]
network-analysis = ["avail-light-engine/network-analysis"]
kademlia-rocksdb = ["avail-light-engine/kademlia-rocksdb"]
crawl = ["avail-light-engine/crawl"]
default = []
