[package]
name = "avail-light-client"
version = "1.13.0"
build = "../build.rs"
edition = "2021"
description = "Avail network p2p Light Client"

[dependencies]
# Internal deps
avail-light-core = { workspace = true }
avail-rust = { workspace = true }
kate = { workspace = true }

better-panic = "0.3.0"
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
confy = "0.4.0"
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = "1.0"
strip-ansi-escapes = "0.2.0"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
hex-literal = "0.4.0"
proptest = "1.0.0"
test-case = "3.2.1"

[features]
network-analysis = ["avail-light-core/network-analysis"]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
multiproof = ["avail-light-core/multiproof"]
