[package]
name = "avail-light-compatibility-test"
version = "0.0.0"
description = "Avail Light compatibility tests"
edition = "2021"

[dependencies]
avail-light-engine = { path = "../engine" }

kate-recovery = { version = "0.9", git = "https://github.com/availproject/avail-core", tag = "node-v2100-rc1" }

clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
