[package]
name = "avail-light-compatibility-test"
version = "0.0.0"
edition = "2021"
description = "Avail Light compatibility tests"
repository = "https://github.com/availproject/avail-light"

[dependencies]
avail-light-engine = { path = "../engine" }

# Internal deps
kate-recovery = { workspace = true }

clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
