[package]
name = "avail-light-compatibility-test"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/availproject/avail-light"
description = "Avail Light compatibility tests"

[dependencies]
# Internal deps
avail-light-engine = { workspace = true }
kate-recovery = { workspace = true }

clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
