[package]
name = "avail-light-compatibility-tests"
version = "0.0.0"
edition = "2021"
description = "Avail Light compatibility tests"

[dependencies]
# Internal deps
avail-light-core = { workspace = true }
avail-rust = { workspace = true }
kate-recovery = { workspace = true }

clap = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
