[package]
name = "avail-light-core"
version = "1.0.5"
edition = "2021"
description = "Avail Light core driving library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal deps
avail-rust = { workspace = true }

# 3rd-party
better-panic = "0.3.0"
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full", "bit-vec"] }
color-eyre = { workspace = true }
derive_more = { version = "1", features = ["from"] }
futures = { workspace = true }
getrandom = { version = "0.2.15", features = ["js"] }
strip-ansi-escapes = "0.2.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Internal deps
dusk-plonk = { workspace = true }

# 3rd-party
async-std = { workspace = true }
async-stream = "0.3.5"
async-trait = { workspace = true }
base64 = "0.21.0"
chrono = "0.4.19"
confy = { workspace = true }
convert_case = "0.6.0"
derive_more = { version = "1", features = ["from"] }
futures = { workspace = true }
hex = { workspace = true }
hyper = { version = "0.14.23", features = ["full", "http1"] }
itertools = "0.10.5"
jsonrpsee-core = { version = "0.21.0", features = ["client"] }
libc = "0.2.150"
libp2p = { workspace = true }
libp2p-allow-block-list = { workspace = true }
libp2p-webrtc = { version = "=0.8.0-alpha", features = ["tokio"] }
mockall = "0.11.3"
multihash = { workspace = true }
num = "0.4.0"
num_cpus = "1.13.0"
pcap = "1.1.0"
rand = { workspace = true, default-features = true }
rand_chacha = "0.3"
rocksdb = { version = "0.21.0", features = ["snappy", "multi-threaded-cf"], optional = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.125"
smallvec = "1.6.1"
strip-ansi-escapes = "0.2.0"
sysinfo = "0.30.12"
thiserror = "1.0.64"
threadpool = "1.8.1"
tokio-retry = "0.3"
tokio-stream = { workspace = true }
tokio-util = "0.7.10"
tracing = { workspace = true }
uuid = { workspace = true }
void = { workspace = true }
warp = { workspace = true }

# OpenTelemetry
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
blake2b_simd = "1.0.2"
rand = { workspace = true, features = ["std_rng"] }
tokio_with_wasm = { version = "0.7.1", default-features = false, features = ["sync", "macros", "rt", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
hex-literal = "0.4.1"
proptest = "1.0.0"
test-case = "3.2.1"

[features]
network-analysis = []
rocksdb = ["dep:rocksdb"]
crawl = []
default = []
