[package]
name = "avail-light-crawler"
version = "0.1.0"
authors.workspace = true
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true, features = ["crawl"] }
clap.workspace = true
color-eyre.workspace = true
confy.workspace = true
kate-recovery.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
