[package]
name = "avail-light-crawler"
version = "0.2.0"
authors.workspace = true
build = "../build.rs"
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true, features = ["crawl"] }
clap.workspace = true
color-eyre.workspace = true
confy.workspace = true
kate-recovery = { workspace = true }
libp2p = { workspace = true }
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[features]
rocksdb = ["avail-light-core/rocksdb"]
multiproof = ["avail-light-core/multiproof"]
default = ["rocksdb"]
