[package]
name = "avail-light-fat"
version = "0.1.0"
authors.workspace = true
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true }
avail-rust.workspace = true
clap.workspace = true
color-eyre.workspace = true
confy.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
