[package]
name = "avail-light-fat"
version = "1.12.8"
authors.workspace = true
build = "../build.rs"
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true }
clap.workspace = true
color-eyre.workspace = true
confy.workspace = true
libp2p = { workspace = true }
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kate-recovery = { workspace = true }

[features]
rocksdb = ["avail-light-core/rocksdb"]
multiproof = ["avail-light-core/multiproof"]
default = ["rocksdb"]
