[package]
name = "avail-light-monitor"
version = "0.1.0"
authors.workspace = true
build = "../build.rs"
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
statrs = "0.16.0"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
