[package]
name = "p2p-load-test"
version = "0.1.0"
authors.workspace = true
build = "../build.rs"
edition = "2021"
repository.workspace = true

[dependencies]
avail-light-core = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
kate-recovery = { workspace = true }
avail-core = { workspace = true }

[features]
rocksdb = ["avail-light-core/rocksdb"]
multiproof = ["avail-light-core/multiproof"]
default = ["rocksdb"]