[package]
name = "avail-light-relay"
version = "0.0.0"
authors = ["Avail Team"]
edition = "2021"
repository = "https://github.com/availproject/avail-light"
description = "Avail network Relay Node for p2p Light Client"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
confy = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
multihash = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_api = { workspace = true }
opentelemetry_sdk = { workspace = true }
