[package]
name = "avail-light-server"
version = "0.0.1"
build = "../build.rs"
edition = "2021"
description = "Avail network p2p Light Server"

[dependencies]
# Internal deps
avail-light-core = { workspace = true }

better-panic = "0.3.0"
clap = { workspace = true }
color-eyre = { workspace = true }
confy = "0.4.0"
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
serde = { workspace = true }
strip-ansi-escapes = "0.2.0"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[features]
rocksdb = ["avail-light-core/rocksdb"]
default = ["rocksdb"]
